--- a/Exemple_application_3_1.ipynb
+++ b/Exemple_application_3_1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNPAXF46ykz1S1QjiVepPVA"
+      "authorship_tag": "ABX9TyPfaPm6RwhQgFtKRHqah+wu"
     },
     "kernelspec": {
       "name": "python3",
@@ -165,7 +165,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "3.3.\tMachine à vecteurs de support (SVM)"
+        "# **3.3.\tMachine à vecteurs de support (SVM)**"
       ],
       "metadata": {
         "id": "UncWcAQGGgfL"
@@ -216,28 +216,129 @@
         "print(\"Score F2 :\", f2)\n"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "tYrbHUQqGi3C",
-        "outputId": "93b5884e-8924-4ea7-e095-2f7f96393023"
+        "id": "tYrbHUQqGi3C"
       },
-      "execution_count": 9,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "\n",
-            "Évaluation sur les données de test avec SVM :\n",
-            "Exactitude (Accuracy) : 0.9\n",
-            "Précision (Precision) : 0.9142857142857143\n",
-            "Rappel (Recall) : 0.9\n",
-            "Score F1 : 0.8967032967032967\n",
-            "Score F2 : 0.896434634974533\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## **classification SVM avec noyau polynomial**"
+      ],
+      "metadata": {
+        "id": "XFwJXnXfTOLp"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Importation des bibliothèques nécessaires\n",
+        "import pandas as pd\n",
+        "from sklearn.svm import SVC\n",
+        "from sklearn.preprocessing import StandardScaler\n",
+        "from sklearn.metrics import accuracy_score, precision_score, recall_score, f1_score, fbeta_score\n",
+        "# Chargement et préparation des données d'entraînement\n",
+        "df_train = pd.read_excel('/content/exemple_3.1.xlsx', sheet_name='Train')\n",
+        "X_train = df_train[['X1', 'X2', 'X3', 'X4']]\n",
+        "y_train = df_train['Y']\n",
+        "# Standardisation des données d'entraînement\n",
+        "scaler = StandardScaler()\n",
+        "X_train_scaled = scaler.fit_transform(X_train)\n",
+        "# Initialisation du modèle SVM avec un noyau polynomial\n",
+        "modele_svm = SVC(kernel='poly', degree=2, C=1.0, gamma='auto')  # Ajustez degree, C, gamma selon vos besoins\n",
+        "# Entraînement du modèle\n",
+        "modele_svm.fit(X_train_scaled, y_train)\n",
+        "# Chargement et préparation des données de test\n",
+        "df_test = pd.read_excel('/content/exemple_3.1.xlsx', sheet_name='Test')\n",
+        "X_test = df_test[['X1', 'X2', 'X3', 'X4']]\n",
+        "y_test = df_test['Y']\n",
+        "# Normalisation des données de test\n",
+        "X_test_scaled = scaler.transform(X_test)\n",
+        "# Prédictions sur les données de test\n",
+        "y_pred = modele_svm.predict(X_test_scaled)\n",
+        "df_test['Y_pred'] = y_pred\n",
+        "# Sauvegarde des prédictions dans un fichier Excel\n",
+        "df_test.to_excel('/content/svm_polynomial.xlsx', sheet_name='Test', index=False)\n",
+        "# Calcul et affichage des métriques d'évaluation\n",
+        "accuracy = accuracy_score(y_test, y_pred)\n",
+        "precision = precision_score(y_test, y_pred, average='weighted')\n",
+        "recall = recall_score(y_test, y_pred, average='weighted')\n",
+        "f1 = f1_score(y_test, y_pred, average='weighted')\n",
+        "f2 = fbeta_score(y_test, y_pred, beta=2, average='weighted')\n",
+        "print(\"\\nÉvaluation sur les données de test avec SVM (Noyau Polynomial) :\")\n",
+        "print(\"Exactitude (Accuracy) :\", accuracy)\n",
+        "print(\"Précision (Precision) :\", precision)\n",
+        "print(\"Rappel (Recall) :\", recall)\n",
+        "print(\"Score F1 :\", f1)\n",
+        "print(\"Score F2 :\", f2)\n"
+      ],
+      "metadata": {
+        "id": "q4gxxjbsTdEu"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# **3.4.Naïve Bayes**"
+      ],
+      "metadata": {
+        "id": "Yl92jnsVT-P5"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Code Python\n",
+        "# Importation des bibliothèques\n",
+        "import pandas as pd\n",
+        "from sklearn.naive_bayes import GaussianNB, BernoulliNB\n",
+        "from sklearn.metrics import accuracy_score, precision_score, recall_score, f1_score, fbeta_score\n",
+        "# Chargement et préparation des données d'entraînement\n",
+        "df_train = pd.read_excel('/content/exemple_3.1.xlsx', sheet_name='Train')\n",
+        "X_train = df_train[['X1', 'X2', 'X3', 'X4']]\n",
+        "y_train = df_train['Y']\n",
+        "# Modèles Naïve Bayes pour chaque type de variable\n",
+        "model_gaussian = GaussianNB()    # Pour les variables continues (X2, X3, X4)\n",
+        "model_bernoulli = BernoulliNB()  # Pour la classification binaire (Y)\n",
+        "# Entraînement des modèles\n",
+        "model_gaussian.fit(X_train[['X2', 'X3', 'X4']], y_train)  # Variables continues\n",
+        "model_bernoulli.fit(X_train[['X1']], y_train)             # Variable de comptage (X1)\n",
+        "# Chargement et préparation des données de test\n",
+        "df_test = pd.read_excel('/content/exemple_3.1.xlsx', sheet_name='Test')\n",
+        "X_test = df_test[['X1', 'X2', 'X3', 'X4']]\n",
+        "y_test = df_test['Y']\n",
+        "# Prédictions avec les modèles hybrides\n",
+        "pred_gaussian = model_gaussian.predict(X_test[['X2', 'X3', 'X4']])  # Prédictions pour les variables continues\n",
+        "pred_bernoulli = model_bernoulli.predict(X_test[['X1']])            # Prédictions pour la variable de comptage\n",
+        "# Combinaison des prédictions (par exemple, en utilisant une logique de vote majoritaire)\n",
+        "import numpy as np\n",
+        "pred_combined = np.where((pred_gaussian + pred_bernoulli) >= 1, 1, 0)  # Si au moins un modèle prédit 1, on classe comme 1\n",
+        "# Sauvegarde des prédictions dans un fichier Excel\n",
+        "df_test['y_pred'] = pred_combined\n",
+        "df_test.to_excel('/content/Client_impulsif_avec_predictions_naive_bayes_hybride.xlsx', sheet_name='Test', index=False)\n",
+        "# Calcul et affichage des métriques d'évaluation\n",
+        "accuracy = accuracy_score(y_test, pred_combined)\n",
+        "precision = precision_score(y_test, pred_combined, average='weighted')\n",
+        "recall = recall_score(y_test, pred_combined, average='weighted')\n",
+        "f1 = f1_score(y_test, pred_combined, average='weighted')\n",
+        "fbeta = fbeta_score(y_test, pred_combined, beta=1, average='weighted')\n",
+        "f2 = fbeta_score(y_test, pred_combined, beta=2, average='weighted')\n",
+        "print(\"Évaluation du modèle hybride Naïve Bayes :\")\n",
+        "print(f\"Exactitude (Accuracy) : {accuracy:.4f}\")\n",
+        "print(f\"Précision : {precision:.4f}\")\n",
+        "print(f\"Rappel (Recall) : {recall:.4f}\")\n",
+        "print(f\"F1-Score : {f1:.4f}\")\n",
+        "print(f\"F-Beta Score (beta=1) : {fbeta:.4f}\")\n",
+        "print(f\"F2-Score (beta=2) : {f2:.4f}\")\n"
+      ],
+      "metadata": {
+        "id": "maMih33JUCrM"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
